--- a/.github/workflows/R4A.yml
+++ b/.github/workflows/R4A.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: R66S
+name: Xiaomi R4A
 
 on:
   repository_dispatch:
@@ -24,8 +24,8 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: R66S.feeds.conf.default
-  CONFIG_FILE: configs/R66S.config
+  FEEDS_CONF: R4A.feeds.conf.default
+  CONFIG_FILE: configs/R4A.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
