--- a/.github/workflows/R4A.yml
+++ b/.github/workflows/R4A.yml
@@ -189,7 +189,7 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
+        echo "release_tag=$(grep "CONFIG_TARGET_" .config | sed 's/^CONFIG_TARGET_//;s/=y$//;s/DEVICE_//' | awk '{ if (length > max_length) { max_length = length; longest_line = $0 } } END { print longest_line }') $(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
         touch release.txt
         [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
