--- a/configs/R4A.config
+++ b/configs/R4A.config
@@ -1,75 +1,71 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-4a-gigabit=y
+CONFIG_PACKAGE_TAR_BZIP2=y
+CONFIG_PACKAGE_TAR_GZIP=y
+CONFIG_PACKAGE_TAR_POSIX_ACL=y
+CONFIG_PACKAGE_TAR_XATTR=y
+CONFIG_PACKAGE_TAR_XZ=y
+CONFIG_PACKAGE_TAR_ZSTD=y
 CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_bzip2=y
+CONFIG_PACKAGE_coreutils-stty=y
 CONFIG_PACKAGE_e2fsprogs=y
+CONFIG_PACKAGE_frpc=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-ipt-ipopt=y
+CONFIG_PACKAGE_kmod-sched-connmark=y
+CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_libacl=y
+CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libext2fs=y
-CONFIG_PACKAGE_libffi=y
-CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_liblzma=y
+CONFIG_PACKAGE_libminiupnpc=y
+CONFIG_PACKAGE_libmount=y
+CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libparted=y
-CONFIG_PACKAGE_libpython3=y
 CONFIG_PACKAGE_libreadline=y
-CONFIG_PACKAGE_libsqlite3=y
+CONFIG_PACKAGE_libsmartcols=y
 CONFIG_PACKAGE_libss=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
+CONFIG_PACKAGE_libzstd=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 # CONFIG_PACKAGE_luci-app-ddns is not set
 CONFIG_PACKAGE_luci-app-diskman=y
-# CONFIG_PACKAGE_luci-app-filetransfer is not set
+CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-qos=y
+CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-qos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-# CONFIG_PACKAGE_luci-lib-fs is not set
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_luci-lib-taskd=y
+CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_parted=y
-CONFIG_PACKAGE_python-pip-conf=y
-CONFIG_PACKAGE_python3=y
-CONFIG_PACKAGE_python3-asyncio=y
-CONFIG_PACKAGE_python3-base=y
-CONFIG_PACKAGE_python3-certifi=y
-CONFIG_PACKAGE_python3-cgi=y
-CONFIG_PACKAGE_python3-cgitb=y
-CONFIG_PACKAGE_python3-chardet=y
-CONFIG_PACKAGE_python3-codecs=y
-CONFIG_PACKAGE_python3-ctypes=y
-CONFIG_PACKAGE_python3-dbm=y
-CONFIG_PACKAGE_python3-decimal=y
-CONFIG_PACKAGE_python3-distutils=y
-CONFIG_PACKAGE_python3-email=y
-CONFIG_PACKAGE_python3-idna=y
-CONFIG_PACKAGE_python3-light=y
-CONFIG_PACKAGE_python3-logging=y
-CONFIG_PACKAGE_python3-lzma=y
-CONFIG_PACKAGE_python3-multiprocessing=y
-CONFIG_PACKAGE_python3-ncurses=y
-CONFIG_PACKAGE_python3-openssl=y
-CONFIG_PACKAGE_python3-pip=y
-CONFIG_PACKAGE_python3-pkg-resources=y
-CONFIG_PACKAGE_python3-pydoc=y
-CONFIG_PACKAGE_python3-readline=y
-CONFIG_PACKAGE_python3-requests=y
-CONFIG_PACKAGE_python3-setuptools=y
-CONFIG_PACKAGE_python3-sqlite3=y
-CONFIG_PACKAGE_python3-unittest=y
-CONFIG_PACKAGE_python3-urllib=y
-CONFIG_PACKAGE_python3-urllib3=y
-CONFIG_PACKAGE_python3-uuid=y
-CONFIG_PACKAGE_python3-xml=y
+CONFIG_PACKAGE_qos-scripts=y
+CONFIG_PACKAGE_script-utils=y
 CONFIG_PACKAGE_smartmontools=y
+CONFIG_PACKAGE_tar=y
+CONFIG_PACKAGE_taskd=y
+CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_xz=y
+CONFIG_PACKAGE_xz-utils=y
+CONFIG_PACKAGE_zerotier=y
 CONFIG_PARTED_READLINE=y
-CONFIG_SQLITE3_COLUMN_METADATA=y
-CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
-CONFIG_SQLITE3_FTS3=y
-CONFIG_SQLITE3_FTS4=y
-CONFIG_SQLITE3_FTS5=y
-CONFIG_SQLITE3_JSON1=y
-CONFIG_SQLITE3_RTREE=y
+CONFIG_ZSTD_OPTIMIZE_O3=y
